<resources>
    <string name="app_name">BasKita</string>
    <string name="action_settings">Settings</string>
    <string name="googlemapsimapsi_api_key">AIzaSyDoa09BvszoRopB6Jdw7rsVeDiIV9AoUvo</string>
    <string name="schedule">Schedule</string>
    <string name="next">Next</string>
    <string name="loading">Loading...</string>
    <string name="locate">Locate</string>
    <string name="bus_id"> Bus ID </string>
    <string name="last_bus_stop"> Reaching.. </string>
    <string name="my_location">My Location</string>
    <string name="hint_search_text">Search Places..</string>
    <string name="hint_current_lcoation">Current Location</string>
    <string name="hint_destination">Destination (Optional)</string>
    <string name="under_development">Under Development</string>
    <string name="send_report">Send Report</string>
    <string name="bus_list">Bus List</string>
    <string name="eta">ETA</string>
    <string name="check_internet">Please check your Internet</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_short">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="subject">Lorem ipsum</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="lets_walk">Let\'s Walk</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="building">Building</string>
    <string name="faculty">Faculty</string>
    <string name="hall">Hall</string>
    <string name="health_center">Health Center</string>
    <string name="hostel">Hostel</string>
    <string name="library">Library</string>
    <string name="recreation">Recreation</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_connectivity">Please check your network connectivity</string>
    <string name="error_credential">Please check your username and password is incorrect</string>
    <string name="error_server">Please try again later server currently down</string>
    <string name="error_opss">Opss something wrong</string>
    <string name="url_signup">http://api.myxlab.solutions/api/v1/register</string>
    <string name="url_forgot_password">http://api.myxlab.solutions/api/v1/password/forgot</string>
    <string name="url_login">http://api.myxlab.solutions/api/v1/authenticate</string>
    <string name="url_poi_list">http://api.myxlab.solutions/api/v1/attractpoint</string>
    <string name="url_bus_stop_list">http://api.myxlab.solutions/api/v1/terminal</string>
    <string name="url_get_alerts">http://api.myxlab.solutions/api/v1/adu</string>
    <string name="url_poi_bus_stop_list">http://api.myxlab.solutions/api/v1/nearestpoi</string>
    <string name="url_bus">http://api.myxlab.solutions/api/v1/bus</string>
    <string name="url_bus_location">http://api.myxlab.solutions/api/v1/translocate</string>
    <string name="url_eta_old">http://vbus.myxlab.solutions/getETAv2.php</string>
    <string name="url_eta">http://api.myxlab.solutions/api/v1/eta</string>
    <string name="url_route">http://api.myxlab.solutions/api/v1/way</string>
    <string name="get_walking_url">https://maps.googleapis.com/maps/api/directions/json?origin=</string>
    <string name="API_KEY_GET_WALK">AIzaSyCuZCfoPPUV1upJT10kJbCbV71LUqwhFCM</string>
    <string name="email">A123456</string>
    <string name="email_add">A123456@siswa.ukm.edu.my</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up in Seconds</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
</resources>