<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp">

    <android.support.v7.widget.CardView
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:text="@string/subject"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mini_dp">



            <LinearLayout
                android:layout_below="@+id/BusStopInfoIco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:background="@color/blue"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/medium_dp">


                <RelativeLayout
                    android:id="@+id/locatebtn"
                    android:padding="@dimen/medium_dp"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:id="@+id/tvbusLocate"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/bus_id"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/schedulebtn"
                    android:padding="@dimen/medium_dp"
                    android:layout_weight="2"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:id="@+id/tvbusSchedule"
                        android:gravity="left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/last_bus_stop"/>

                </RelativeLayout>

            </LinearLayout>




    </android.support.v7.widget.CardView>

</RelativeLayout>